# Adv_DS_ETEP

./: .gitignore  Dockerfile  app.py  main.py  push_data.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
networksecurity/cloud/: s3_sync.py
networksecurity/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_training.py
networksecurity/constants/training_pipeline/: __init__.py
networksecurity/entity/: artifact_entity.py  config_entity.py
networksecurity/exceptions/: exception.py
networksecurity/pipeline/: training_pipeline.py
networksecurity/utils/main_utils/: utils.py
networksecurity/utils/ml_utils/metrics/: classification_metrics.py
networksecurity/utils/ml_utils/models/: estimator.py
